--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "next": "^9.5.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-icons": "^4.2.0",
-    "styled-components": "^5.3.0"
-  }
+    "react-icons": "^4.2.0"
+  },
+  "devDependencies": {}
 }
