--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "export": "next export"
   },
   "dependencies": {
-    "next": "^9.5.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-icons": "^4.2.0"
+    "next": "10.0.7",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
+    "react-text-transition": "^1.3.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "typescript": "^4.1.5"
+  }
 }
